# snake-clone

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
assets/backgrounds/: Game-Bg-cDL.ase  Game-Bg-cDR.ase  Game-Bg-cTL.ase  Game-Bg-cTR.ase  Game-Bg-mD.ase  Game-Bg-mL.ase  Game-Bg-mR.ase  Game-Bg-mT.ase  Game-Bg.ase  Start-Bg.ase
assets/objects/: Food.ase  Snake-Body.ase  Snake-Head.ase  Snake-Tail.ase
include/core/: SceneManager.h
include/object/: Food.h  Snake.h
include/scene/: EndScene.h  GameScene.h  Scene.h  SceneType.h  StartScene.h
src/core/: CMakeLists.txt  SceneManager.cpp
src/object/: CMakeLists.txt  Food.cpp  Snake.cpp
src/scene/: CMakeLists.txt  EndScene.cpp  GameScene.cpp  StartScene.cpp
